fixed spacing of banner description

--- a/styles/Images/style.css
+++ b/styles/Images/style.css
@@ -87,7 +87,12 @@ body{
 .banner-description{
     font-size: 1rem;
     font-weight: 400;
+    /* text-align: center; */
+    display: flex;
+    justify-content: center;
+    width: 50%;
 }
+
 .banner-in{
  /* border: 1px solid red; */
  display: flex;
@@ -131,6 +136,8 @@ body{
 .banner-description p{
     margin-top: 0;
     margin-bottom: 28px;
+    width: 100%;
+    text-align: center;
 }
 
 /* popular tours */
